src/style.css
body {
    position: fixed;
    display: block;
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
}

.wrapper {
    width: calc(100vw - 6px);
    height: calc(100vh - 6px); 
    left: 0;
    right: 0;
    margin: 0;
    padding: 0;
    border: 3px solid gray;
    background: silver;
}

.head {
    position: relative;
    width: calc(100vw - 12px);
    height: 10vh;
    left: 0;
    right: 0;
    margin: 0;
    padding: 0;
    border: 3px solid gray;
    background: ivory;

} 

.window {

        position: relative;

    background: transparent;
    left: 0;
    right: 0;
    margin: 0;
    padding: 0;
    width: calc(100vw - 6px);
    height: calc(85vh - 15px);
}

.add-button {
    position: fixed;
    width: 5vw;
    height: 5vh;
    margin-left: 10vw;
    margin-top: 2.5vh;
}

.inner-window {
    display: block;
    position: absolute;
    width: 25vw;
    height: 25vh;
    background: indianred;
    border: 3px solid black;
}


.full {
    z-index: 999;
    width: 100%;
    height: 100%;
}

.delete-button {
    position: fixed;
}

.hidden {
    display: flex;
    flex-direction: row;
    position: relative;
    width: calc(100% - 6px);
    height: 5%;
    left: 0;
    right: 0;
    margin: 0;
    padding: 0;
    border: 3px solid gray;
    background: ivory;
}

.hide {
    margin-left: 2px;
    margin-top: 5px;
    background: lightslategray;
    width: calc(8vw - 5px);
    height: 3vh;
    border: 3px solid gray;
    background: ivory;
}

